Creazione visite con stato proposed, implementazione effettiva della raccolta delle disponibilità + clean